# spatial_sim

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  TODO.md  TODO.txt  analyze.ipynb  rebuild.sh  res  run.py  run.sh  test_wrapper.py  vivado.jou  vivado_pid14580.str
deleted_codes/: a.cpp  a.out  instruction.cc  instruction.h
eg_b4_3x3/: t_1.txt  t_10.txt  t_11.txt  t_12.txt  t_13.txt  t_14.txt  t_15.txt  t_16.txt  t_17.txt  t_18.txt  t_19.txt  t_2.txt  t_20.txt  t_3.txt  t_4.txt  t_5.txt  t_6.txt  t_7.txt  t_8.txt  t_9.txt
eg_b4_3x3_trans/: t_0.txt  t_1.txt  t_10.txt  t_11.txt  t_12.txt  t_13.txt  t_14.txt  t_15.txt  t_16.txt  t_17.txt  t_18.txt  t_19.txt  t_2.txt  t_20.txt  t_3.txt  t_4.txt  t_5.txt  t_6.txt  t_7.txt  t_8.txt  t_9.txt
examples/: README.md
examples/ring/: c0.inst  c1.inst  c2.inst  c3.inst  task_spec
instructions/: c0.inst
old_files/monitor/: monitor.hpp
project_1/: project_1.xpr
pyAPI/: __init__.py  agent.py  test_wrapper.py
runfiles/: focusconfig  instr_latency  micro_instr_latency  snnconfig  spatial_spec  spatial_spec_ref
runfiles/core_array_spec/: core_array  latency  test
runfiles/examples/: testconfig
runfiles/noc/: focusconfig
runfiles/noc_spec/: focusconfig  hybridconfig
scripts/: analyze.ipynb  trans.py
src/: .gitignore  CMakeLists.txt  Makefile  analyze.py  booksim_config.cpp  core_array.cpp  flit.hpp  injection.cpp  injection.hpp  main.cpp  noc.cpp  out.txt  rate copy.txt  rate.txt  rebuild.sh  routefunc.cpp  run.sh  spatial_chip.cpp  stats.cpp  stats.hpp  trace.txt  traffic.cpp  traffic.hpp  trafficmanager.cpp  trafficmanager.hpp  wrapper.cpp
src/core/: CMakeLists.txt  README.md
src/core/include/: accelerator.h  buffer.h  bus.h  common.h  component.h  core.h  micro_instr.h  network_interface.h  parser.h  riscv_cpu.h
src/core/src/: accelerator.cpp  buffer.cpp  bus.cpp  common.cpp  component.cc  core.cpp  core_main.cpp  network_interface.cpp  parser.cpp  riscv_cpu.cpp
src/examples/: focusconfig  snnconfig  testconfig
src/focus/: focus.cpp  focus.hpp
src/include/: bridge.hpp  core_array.hpp  custom_configs.hpp  noc.hpp  operator.hpp  packet.hpp  path.hpp  spatial_chip.hpp  spatial_config.hpp  spatial_sim_config.hpp
src/monitor/: monitor.cpp  monitor.hpp
src/networks/: fattree.cpp
src/noc/: CMakeLists.txt  Makefile  README.md  booksim_config.cpp  buffer.cpp  config_utils.cpp  flit.cpp  injection.cpp  main.cpp  noc_main.cpp  outputset.cpp  routefunc.cpp  stats.cpp  traffic.cpp  trafficmanager.cpp  vc.cpp
src/noc/allocators/: allocator.cpp  allocator.hpp  multi_output.hpp
src/noc/focus/: focus.cpp  focus.hpp
src/noc/include/: buffer.hpp  config_utils.hpp  flit.hpp  outputset.hpp  traffic.hpp  trafficmanager.hpp  vc.hpp
src/noc/networks/: anynet.cpp  cmesh.cpp  kncube.cpp
src/noc/parser/: bu
src/noc/routers/: iq_router.cpp  iq_router.hpp  mc_router.cpp  mc_router.hpp  router.cpp  router.hpp
src/power/: power_module.cpp
tasks/: c0.inst
tasks/16-dimm/: c1.inst  c11.inst  c12.inst  c13.inst  c15.inst  c2.inst  c3.inst  c5.inst  c6.inst  c7.inst  c8.inst  c9.inst  spatial_spec
tasks/4-core-1-gemm/: c0.inst  c1.inst  c2.inst  c3.inst  routing_board  spatial_spec
tasks/4-core-p-c/: c0.inst  c1.inst  spatial_spec
tasks/9-core-1-conv/: c0.inst  c3.inst  c4.inst  gen.py  spatial_spec
tasks/9-core-conv-fc/: c0.inst  c1.inst  c2.inst  c5.inst  routing_board  spatial_spec
tasks/bert-large_b1w1024_16x16/: c0.inst  c1.inst  c100.inst  c101.inst  c102.inst  c103.inst  c112.inst  c113.inst  c116.inst  c117.inst  c118.inst  c127.inst  c128.inst  c13.inst  c14.inst  c143.inst  c15.inst  c18.inst  c19.inst  c20.inst  c21.inst  c22.inst  c24.inst  c247.inst  c248.inst  c25.inst  c28.inst  c3.inst  c30.inst  c31.inst  c32.inst  c33.inst  c34.inst  c35.inst  c36.inst  c37.inst  c38.inst  c39.inst  c4.inst  c40.inst  (+42 more)
tasks/bert-large_b1w1024_4x4/: c0.inst  c1.inst  c10.inst  c11.inst  c12.inst  c13.inst  c14.inst  c15.inst  c2.inst  c3.inst  c4.inst  c5.inst  c6.inst  c7.inst  c8.inst  c9.inst  routing_board  spatial_spec
tasks/bert-large_b1w1024_5x5/: c0.inst  c1.inst  c10.inst  c11.inst  c12.inst  c13.inst  c14.inst  c15.inst  c16.inst  c17.inst  (+17 more)
test/: dump_flits.txt  in_flight_flits.txt  rebuild.sh  run.sh  trace.txt
utils/: f00  f10  gen_frame.py  trace.tar
(+5411 files in other folders)
